Bug 462130 - Floating panel ignores margin
Summary: Floating panel ignores margin
Status: RESOLVED FIXED
Alias: None
Product: plasmashell
Classification: Plasma
Component: Panel (other bugs)
Version First Reported In: master
Platform: Other Linux
: NOR normal
Target Milestone: 1.0
Assignee: veggero
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2022-11-22 14:23 UTC by dS810
Modified: 2022-12-02 23:08 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.26.5
Sentry Crash Report:


Attachments
Right panel (21.07 KB, image/png)
2022-11-22 14:23 UTC, dS810
Details
Settings (74.89 KB, image/png)
2022-11-22 14:34 UTC, dS810
Details

Note You need to log in before you can comment on or make changes to this bug.
Description dS810 2022-11-22 14:23:54 UTC
Created attachment 153939 [details]
Right panel

As you can see, the WiFi icon on the right panel has no padding/margin to the right border

(see Screenshot)
Comment 1 veggero 2022-11-22 14:25:42 UTC
Can you include a screenshot whilst in edit mode of that particular panel?
Comment 2 dS810 2022-11-22 14:34:43 UTC
Created attachment 153940 [details]
Settings
Comment 3 veggero 2022-11-22 14:40:22 UTC
Can reproduce
Comment 4 Bug Janitor Service 2022-11-22 15:00:28 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/plasma-workspace/-/merge_requests/2352
Comment 5 Nate Graham 2022-12-02 23:07:44 UTC
Git commit 9d90c7105a91748c6767f7abf758a4f597a2d5c0 by Nate Graham, on behalf of Niccolò Venerandi.
Committed on 02/12/2022 at 23:07.
Pushed by ngraham into branch 'master'.

Panel: Add floating margins to avoid overflowing content when floating

This is because we're adding the floating margin *inside* the panel's window,
which means that the actual length of the panel ends up being (content length -
floating margins). I'm just adding them back when we calculate the size of the
panel.
FIXED-IN: 5.26.5

M  +2    -2    shell/panelview.cpp

https://invent.kde.org/plasma/plasma-workspace/commit/9d90c7105a91748c6767f7abf758a4f597a2d5c0
Comment 6 Nate Graham 2022-12-02 23:08:20 UTC
Git commit 12c258d531deb2fb6700e320d87463df1c948664 by Nate Graham, on behalf of Niccolò Venerandi.
Committed on 02/12/2022 at 23:08.
Pushed by ngraham into branch 'cherry-pick-9d90c710'.

Panel: Add floating margins to avoid overflowing content when floating

This is because we're adding the floating margin *inside* the panel's window,
which means that the actual length of the panel ends up being (content length -
floating margins). I'm just adding them back when we calculate the size of the
panel.
FIXED-IN: 5.26.5


(cherry picked from commit 9d90c7105a91748c6767f7abf758a4f597a2d5c0)

M  +2    -2    shell/panelview.cpp

https://invent.kde.org/plasma/plasma-workspace/commit/12c258d531deb2fb6700e320d87463df1c948664